[gd_scene load_steps=5 format=2]

[ext_resource path="res://Units/BaseUnit.gd" type="Script" id=1]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 50.0

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 50.0

[node name="BaseUnit" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
movementSpeed = 1
maxHealth = 1
attackDamage = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="BodyCollision" type="CollisionShape2D" parent="."]

[node name="View" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="Shape" type="CollisionShape2D" parent="View"]
shape = SubResource( 1 )

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="Shape" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_View_body_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
